# maui-pix

./: .gitignore  .gitmodules  .travis.yml  .travis.yml_disabled  CMakeLists.txt  Messages.sh  Pix.pro  README.md  assets.qrc  icons.qrc  install.pri  kirigami-icons.qrc  main.cpp  org.kde.pix.appdata.xml  org.kde.pix.desktop  pix.pro  pix.py  travis-build.sh
android/: Android.pri  AndroidManifest.xml  android.cpp  android.h  gradle.properties
android_files/: AndroidManifest.xml  build.gradle
android_files/res/values/: libs.xml
android_files/res/xml/: filepaths.xml
assets/: .directory  Babe.notifyrc
debian/: changelog  control  copyright
exiv2/: CMakeLists.txt  CMake_msvc.txt  FindExiv2.cmake  bootstrap.macports  bootstrap.mxe  configure
exiv2/config/: FindEXPAT.cmake  FindMSGFMT.cmake  FindSSH.cmake  aclocal.m4  ltmain.sh
exiv2/contrib/: coverity.sh
exiv2/msvc/tools/python/: tee.py
exiv2/po/: CMakeLists.txt
exiv2/samples/: CMakeLists.txt
exiv2/src/: CMakeLists.txt
exiv2/xmpsdk/: CMakeLists.txt
icons/: Luv
kde/: KDE.pri  kde.cpp  kde.h  notify.cpp  notify.h
po/ar/: pix.po
po/ca/: pix.po
po/ca@valencia/: pix.po
po/cs/: pix.po
po/de/: pix.po
po/en_GB/: pix.po
po/eo/: pix.po
po/es/: pix.po
po/eu/: pix.po
po/fi/: pix.po
po/fr/: pix.po
po/ga/: pix.po
po/gl/: pix.po
po/he/: pix.po
po/hu/: pix.po
po/it/: pix.po
po/ja/: pix.po
po/ka/: pix.po
po/ko/: pix.po
po/lt/: pix.po
po/lv/: pix.po
po/my/: pix.po
po/nl/: pix.po
po/nn/: pix.po
po/pa/: pix.po
po/pl/: pix.po
po/pt/: pix.po
po/pt_BR/: pix.po
po/sa/: pix.po
po/sk/: pix.po
po/sl/: pix.po
po/sv/: pix.po
po/tr/: pix.po
po/uk/: pix.po
po/zh_CN/: pix.po
po/zh_TW/: pix.po
screenshots/: .directory
src/: CMakeLists.txt  MainSimple.qml  assets.qrc  imgs.qrc  main.cpp  main.qml  org.kde.pix.desktop  pix.cpp  pix.h  pix.pro  pixserver.cpp  pixserver.h  qml.qrc
src/android_files/: AndroidManifest.xml  build.gradle
src/android_files/src-bk/org/pix/examples/sharex/: QShareActivity.java
src/assets/: Babe.notifyrc
src/db/: Query.js  collectionDB.cpp  collectionDB.h  db.cpp  db.h  dbactions.cpp  dbactions.h  fileloader.h  script.sql
src/macos_files/: pix.icns
src/models/: baselist.h  basemodel.cpp  basemodel.h  picinfomodel.cpp  picinfomodel.h  thumbnailer.cpp  thumbnailer.h
src/models/albums/: albums.cpp  albums.h
src/models/cities/: citiesmodel.cpp  citiesmodel.h
src/models/cloud/: cloud.cpp  cloud.h
src/models/folders/: foldermodel.cpp  foldermodel.h  folders.cpp  folders.h  placesmodel.cpp  placesmodel.h
src/models/gallery/: gallery.cpp  gallery.h
src/models/tags/: tagsmodel.cpp  tagsmodel.h
src/utils/: pic.h  pix.cpp  pix.h  utils.cpp  utils.h
src/utils/picinfo/: exiv2extractor.cpp  exiv2extractor.h  kdtree.c  kdtree.h  reversegeocoder.cpp  reversegeocoder.h
src/view_models/: CollageDelegate.qml  PixButton.qml  PixDelegate.qml  PixDialog.qml  PixGrid.qml  PixHolder.qml  PixMenu.qml  PixPage.qml  PixPic.qml  PixPicList.qml  PixPopup.qml  SideBar.qml
src/widgets/: AppView.qml  GalleryView.qml  GlobalDrawer.qml  InfoDialog.qml  OCRSettingsPage.qml  PicMenu.qml  PixFooter.qml  PixsBar.qml  SelectionBar.qml  SettingsDialog.qml  Sidebar.qml
src/widgets/custom/SelectionBox/: SelectionBox.qml
src/widgets/custom/TagBar/: TagBar.qml  TagDelegate.qml  TagList.qml
src/widgets/dialogs/Albums/: AlbumsDialog.qml  AlbumsList.qml  NewAlbumDialog.qml
src/widgets/dialogs/Tags/: TagsDialog.qml  TagsList.qml
src/widgets/dialogs/share/: ShareDelegate.qml  ShareDialog.qml  ShareGrid.qml
src/widgets/views/: CollectionView.qml  FloatingViewer.qml  Pix.js
src/widgets/views/Albums/: AlbumDelegate.qml  AlbumsGrid.qml  AlbumsView.qml
src/widgets/views/Cloud/: CloudView.qml
src/widgets/views/Folders/: FoldersDelegate.qml  FoldersGrid.qml  FoldersView.qml  PicsView.qml
src/widgets/views/Gallery/: GalleryView.qml
src/widgets/views/Search/: SearchView.qml
src/widgets/views/Store/: StoreView.qml
src/widgets/views/Tags/: TagsSidebar.qml  TagsView.qml
src/widgets/views/Viewer/: ConfigurationDialog.qml  EditTools.qml  Editor.qml  GalleryRoll.qml  OCROverlay.qml  OCRPage.qml  PixViewer.qml  Viewer.js  Viewer.qml  ViewerDelegate.qml  ViewerMenu.qml
src/widgets/views/Viewer/editor/: ColourBar.qml  EditorView.qml  Ruler.qml  TransformationBar.qml
windows_files/config/: config.xml
